--- a/tezbazar/website/templates/home.html
+++ b/tezbazar/website/templates/home.html
@@ -97,7 +97,7 @@
                     <div class="col-lg-6 col-md-6">
                         <div class="header__top__left">
                             <ul>
-                                <li><i class="fa fa-envelope"></i>abdulkazimov@gmail.com</li>
+                                <li><i class="fa fa-envelope"></i></li>
                                 <li>50kq dan aşağı olan bütün məhsullarda pulsuz çatdırılma mövcuddur</li>
                             </ul>
                         </div>
@@ -484,8 +484,8 @@
                         </div>
                         <ul>
                             <li>Adres: Səməd Vurğun, QAX rayonu , Azərbaycan</li>
-                            <li>Telefon: +994502031036</li>
-                            <li>Email:abdulkazimov@gmail.com</li>
+                            <li>Telefon: Lazim deyil</li>
+                            <li></li>
                         </ul>
                     </div>
                 </div>
