--- a/tezbazar/website/templates/home.html
+++ b/tezbazar/website/templates/home.html
@@ -337,7 +337,7 @@
                         </div>
                         <div class="featured__item__text">
                             <h6><a href="#">Yumurta</a></h6>
-                            <h5>$30.00</h5>
+                            <h5>$ 99.99 | 80% sale!!!</h5>
                         </div>
                     </div>
                 </div>
