--- a/tezbazar/website/templates/contact.html
+++ b/tezbazar/website/templates/contact.html
@@ -14,14 +14,14 @@
     <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@200;300;400;600;900&display=swap" rel="stylesheet">
 
     <!-- Css Styles -->
-    <link rel="stylesheet" href="css/bootstrap.min.css" type="text/css">
-    <link rel="stylesheet" href="css/font-awesome.min.css" type="text/css">
-    <link rel="stylesheet" href="css/elegant-icons.css" type="text/css">
-    <link rel="stylesheet" href="css/nice-select.css" type="text/css">
-    <link rel="stylesheet" href="css/jquery-ui.min.css" type="text/css">
-    <link rel="stylesheet" href="css/owl.carousel.min.css" type="text/css">
-    <link rel="stylesheet" href="css/slicknav.min.css" type="text/css">
-    <link rel="stylesheet" href="css/style.css" type="text/css">
+    <link rel="stylesheet" href="{% static 'websitetemp/css/bootstrap.min.css' %}" type="text/css">
+    <link rel="stylesheet" href="{% static 'websitetemp/css/font-awesome.min.css' %}" type="text/css">
+    <link rel="stylesheet" href="{% static 'websitetemp/css/elegant-icons.css' %}" type="text/css">
+    <link rel="stylesheet" href="{% static 'websitetemp/css/nice-select.css' %}" type="text/css">
+    <link rel="stylesheet" href="{% static 'websitetemp/css/jquery-ui.min.css' %}" type="text/css">
+    <link rel="stylesheet" href="{% static 'websitetemp/css/owl.carousel.min.css' %}" type="text/css">
+    <link rel="stylesheet" href="{% static 'websitetemp/css/slicknav.min.css' %}" type="text/css">
+    <link rel="stylesheet" href="{% static 'websitetemp/css/style.css' %}" type="text/css">
 </head>
 
 <body>
@@ -305,16 +305,18 @@
                     </div>
                 </div>
             </div>
-            <form action="#">
+            <form action="#" method="post">
                 <div class="row">
                     <div class="col-lg-6 col-md-6">
-                        <input type="text" placeholder="Your name">
+                        {% csrf_token %}
+                        <input type="text" name='Name' placeholder="Enter the name of the advert">
+                        
                     </div>
                     <div class="col-lg-6 col-md-6">
-                        <input type="text" placeholder="Your Email">
+                        <input type="text" name='Price' placeholder="Show the Price">
                     </div>
                     <div class="col-lg-12 text-center">
-                        <textarea placeholder="Your message"></textarea>
+                        <textarea name='Description' placeholder="Description"></textarea>
                         <button type="submit" class="site-btn">SEND MESSAGE</button>
                     </div>
                 </div>
@@ -392,14 +394,14 @@
     <!-- Footer Section End -->
 
     <!-- Js Plugins -->
-    <script src="js/jquery-3.3.1.min.js"></script>
-    <script src="js/bootstrap.min.js"></script>
-    <script src="js/jquery.nice-select.min.js"></script>
-    <script src="js/jquery-ui.min.js"></script>
-    <script src="js/jquery.slicknav.js"></script>
-    <script src="js/mixitup.min.js"></script>
-    <script src="js/owl.carousel.min.js"></script>
-    <script src="js/main.js"></script>
+    <script src="{% static 'websitetemp/js/jquery-3.3.1.min.js ' %}"></script>
+    <script src="{% static 'websitetemp/js/bootstrap.min.js ' %}"></script>
+    <script src="{% static 'websitetemp/js/jquery.nice-select.min.js ' %}"></script>
+    <script src="{% static 'websitetemp/js/jquery-ui.min.js ' %}"></script>
+    <script src="{% static 'websitetemp/js/jquery.slicknav.js ' %}"></script>
+    <script src="{% static 'websitetemp/js/mixitup.min.js ' %}"></script>
+    <script src="{% static 'websitetemp/js/owl.carousel.min.js ' %}"></script>
+    <script src="{% static 'websitetemp/js/main.js ' %}"></script>
 
 
 
