--- a/tezbazar/website/templates/home.html
+++ b/tezbazar/website/templates/home.html
@@ -70,7 +70,7 @@
                     </ul>
                 </li>
                 <li><a href="{% url 'blog' %}">Bloq</a></li>
-                <li><a href="./contact.html">Əlaqə</a></li>
+                <li><a href="{% url 'contact' %}">Əlaqə</a></li>
             </ul>
         </nav>
         <div id="mobile-menu-wrap">hello</div>
@@ -224,7 +224,7 @@
                             <h2>100% Təbii<br />Məhsullar</h2>
                             {% csrf_token %}
                             <p>Pulsuz Çatdırılma Mövcuddur </p>
-                            <a href="#" class="primary-btn">ƏLDƏ ET</a>
+                            <a href="1.html"  class="primary-btn">ƏLDƏ ET</a>
                         </div>
                     </div>
                 </div>
@@ -245,7 +245,7 @@
                     </div>
                     <div class="col-lg-3">
                         <div class="categories__item set-bg" data-setbg="{% static 'websitetemp/img/forme/1234.jpg' %}">
-                            <h5><a href="#">Quru meyvələr</a></h5>
+                            <h5><a href="4.html">Quru meyvələr</a></h5>
                         </div>
                     </div>
                     <div class="col-lg-3">
@@ -302,7 +302,7 @@
                     <div class="featured__item">
                         <div class="featured__item__pic set-bg" data-setbg="{% static 'websitetemp/img/forme/qoz.jpg' %}">
                             <ul class="featured__item__pic__hover">
-                                <li><a href="{% url 'shopdet' %}"><i class="fa fa-shopping-cart"></i></a></li>
+                                <li><a href="4.html"><i class="fa fa-shopping-cart"></i></a></li>
                             </ul>
                         </div>
                         <div class="featured__item__text">
