--- a/tezbazar/website/templates/shopdet.html
+++ b/tezbazar/website/templates/shopdet.html
@@ -287,7 +287,7 @@
                         <a href="#" class="heart-icon"><span class="icon_heart_alt"></span></a>
                         <ul>
                             <li><b>Availability</b> <span>In Stock</span></li>
-                            <li><b>Shipping</b> <span>we always ship. <samp>Free pickup today</samp></span></li>
+                            <li><b>Shipping</b> <span>we never ship. <samp>Free pickup today</samp></span></li>
                             <li><b>Weight</b> <span>0.5 kg</span></li>
                             <li><b>Share on</b>
                                 <div class="share">
