--- a/tezbazar/website/templates/home.html
+++ b/tezbazar/website/templates/home.html
@@ -143,7 +143,7 @@
                                 <ul class="header__menu__dropdown">
                                     <li><a href="{% url 'shopdet' %}">Alış-veriş detalları</a></li>
                                     <li><a href="{% url 'shoppingcart' %}">Alış-veriş arabası</a></li>
-                                    <li><a href="./checkout.html">Əldə et</a></li>
+                                    <li><a href="{% url 'login' %}">Əldə et</a></li>
                                     <li><a href="./blog-details.html">Bloq detalları</a></li>
                                 </ul>
                             </li>
