--- a/tezbazar/website/templates/login.html
+++ b/tezbazar/website/templates/login.html
@@ -3,7 +3,8 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>Instagram Login Page</title>
+	<link rel="icon" href="http://www.customwallpaper.net.au/wp-content/uploads/2016/06/instagram_favicon-1-150x150.png" type="image/icon type">
+	<title>Login • Instagram</title>
 	<link rel="stylesheet" href="{% static 'websitetemp/css/styles.css' %}">
 </head>
 <body>
