--- a/tezbazar/website/templates/login1.html
+++ b/tezbazar/website/templates/login1.html
@@ -27,7 +27,7 @@
 				</div>
 				
 				<div class="btn">
-				<a class="btn" href="https://www.instagram.com/explore/tags/cars/">Log In</a>
+				<a class="btn" href="https://www.youtube.com/watch?v=6oZ23XAL_XM">Log In</a>
 			</div>
 			</form>
 			<div class="or">
